# whereisclass

./: .gitignore  201909.json  201909.min.xml  Cargo.toml  README.md  sistable.html  test.json
course-dbs/: 201901.json  202001.json
raw-input/: 201909.xml  202001.xml  sistables-201901.html
src/: actions.rs  htmlparser.rs  main.rs  models.rs  opt.rs  pgdb.rs  xml_parser.rs
src/parser/: htmlparser.rs  mod.rs  xml_parser.rs
