[package]
name = "whereisclass"
version = "0.1.0"
authors = ["kate"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.7.1"
serde_json = "1.0.41"
regex = "1.3.1"

[dependencies.serde]
version = "1.0.101"
features = ["derive"]