[package]
name = "whereisclass"
version = "0.2.0"
authors = ["CerulanLumina <CerulanLumina@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
rcosxml = ["roxmltree"]

[dependencies]
roxmltree = {version = "0.14.1", optional = true}
serde_json = "1.0.79"
regex = "1.5.5"
scraper = "0.12.0"
structopt = "0.3.26"
serde_derive = "1.0.136"
lazy_static = "1.4.0"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]